Quest-Plugin: Updated to latest version containing latest quests